<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/colorid"
        android:icon="@drawable/color_pallete"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/pen"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/eraseid"
        android:icon="@android:drawable/btn_default_small"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/clearid"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/clear"
        app:showAsAction="always" />

</menu>