<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:text="@string/lable_alpha" />

            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:max="255"
                android:padding="8dp"

                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:text="@string/lable_red" />

            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:max="255"
                android:padding="8dp"

                />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:text="@string/lable_green" />

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:max="255"
                android:padding="8dp"

                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:text="@string/lable_blue" />

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:max="255"
                android:padding="8dp"

                />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/linearLayoutEnd"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/colorView"
            android:layout_width="wrap_content"
            android:layout_height="48dp" >


        </View>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:layout_margin="6dp"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/redColor"
            />
        <Button
            android:layout_margin="6dp"

            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/blueColor"
            />
        <Button
            android:layout_margin="6dp"

            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/greenColor"
            />
        <Button
            android:layout_margin="6dp"

            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/blackColor"
            />
    </LinearLayout>


    <Button
        android:id="@+id/setColorButton"
        android:text="@string/set_color"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setBackgroundColorButton"
        android:text="@string/set_background"
        android:layout_gravity="center_horizontal"

        />


</LinearLayout>